Adding text to html file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>M4 Challenge</title>
 </head>
 <body>
+  <h2>✨ Open the Console to See the Magic ✨</h2>
   <script src="index.js"></script>
 </body>
 </html>
